# Technopark_prep2022

./: .gitignore  CMakeLists.txt  Makefile  main.out  main_test.out  tests.out
.github/workflows/: ci.yml
ExternalLibs/gTest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ExternalLibs/gTest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ExternalLibs/gTest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
btests/: run.sh  updaterecord.dat.gold
project/include/: define_data.h  exceptions.h  extra_utils.h  masterRecord.h  matrix.h  matrix_func.h  parser.h  prime.h  reverse.h  test.h  testRecord.h  test_utils.h  utils.h
project/src/: add_utils.c  basic_operations.c  extra_operations.c  extra_utils.c  init_operations.c  main.c  main_test.c  math_operations.c  matrix.cpp  parser.c  prime.c  reverse.c  test.c  test_utils.c  utils.c  write_utils.c
project/tests/include/: utils.h
project/tests/src/: test_element_setting.c  test_matrix_adjugate.c  test_matrix_arithmetic.c  test_matrix_creating.c  test_matrix_determinant.c  test_matrix_inverse.c  test_matrix_transponse.c  test_scalar_mul.c
