CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(matrix)

OPTION(WITH_MEMCHECK "Run with memcheck" OFF)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
SET (GTEST_ROOT ${CMAKE_SOURCE_DIR}/ExternalLibs/gTest)
find_package(GTest REQUIRED)

ENABLE_TESTING()

ADD_SUBDIRECTORY(project)
